working with blog step 2

--- a/dashboard-pay.html
+++ b/dashboard-pay.html
@@ -232,20 +232,20 @@
             <div class="account__pay account__block active">
                 <div class="account__pay-empty">
                     <p class="account__pay-empty-text">Добавьте вашу банковскую карту, чтобы получать выплаты за заказы<br>Все ваши данные в полной безопасности.</p>
-                    <div class="account__pay-empty-card modal__body-blog-content-card">
-                        <div class="modal__body-blog-content-card-row">
-                            <!-- modal__body-blog-content-card-label--error -->
-                            <label class="modal__body-blog-content-card-label">
-                                <input class="modal__body-blog-content-card-input" type="text" maxlength="19" placeholder="Введіть номер картки">
-                                <div class="modal__body-blog-content-card-cross svg-card-cross"></div>
-                                <p class="modal__body-blog-content-card-text modal__body-blog-content-card-text--error">Неправильний номер картки</p>
+                    <div class="account__pay-empty-card card">
+                        <div class="card__row">
+                            <!-- card__label--error -->
+                            <label class="card__label">
+                                <input class="card__input" type="text" maxlength="19" placeholder="Введіть номер картки">
+                                <div class="card__cross svg-card-cross"></div>
+                                <p class="card__text card__text--error">Неправильний номер картки</p>
                             </label>
                             <!-- svg-card-visa / svg-card-mastercard -->
-                            <div class="modal__body-blog-content-card-svg svg-card-visa"></div>
+                            <div class="card__svg svg-card-visa"></div>
                         </div>
-                        <div class="modal__body-blog-content-card-description">
-                            <p class="modal__body-blog-content-card-description-text">За підтримки</p>
-                            <div class="modal__body-blog-content-card-description-img"></div>
+                        <div class="card__description">
+                            <p class="card__description-text">За підтримки</p>
+                            <div class="card__description-img"></div>
                         </div>
                     </div>
                     <div class="account__pay-empty-action">
