--- a/dashboard-favorit.html
+++ b/dashboard-favorit.html
@@ -255,7 +255,7 @@
                             <div class="catalog-blogger__right">
                                 <div class="catalog-blogger__item-rating">
                                     <div class="catalog-blogger__item-rating-head">
-                                        <p class="catalog-blogger__item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                        <p class="catalog-blogger__item-rating-head-text svg-star">Отзывов: 30</p>
                                     </div>
                                     <div class="catalog-blogger__item-rating-image">
                                         <div class="catalog-blogger__item-rating-chart">
@@ -329,7 +329,7 @@
                             <div class="catalog-blogger__right">
                                 <div class="catalog-blogger__item-rating">
                                     <div class="catalog-blogger__item-rating-head">
-                                        <p class="catalog-blogger__item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                        <p class="catalog-blogger__item-rating-head-text svg-star">Отзывов: 30</p>
                                     </div>
                                     <div class="catalog-blogger__item-rating-image">
                                         <div class="catalog-blogger__item-rating-chart">
@@ -404,7 +404,7 @@
                             <div class="catalog-blogger__right">
                                 <div class="catalog-blogger__item-rating">
                                     <div class="catalog-blogger__item-rating-head">
-                                        <p class="catalog-blogger__item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                        <p class="catalog-blogger__item-rating-head-text svg-star">Отзывов: 30</p>
                                     </div>
                                     <div class="catalog-blogger__item-rating-image">
                                         <div class="catalog-blogger__item-rating-chart">
