--- a/search-bloggers.html
+++ b/search-bloggers.html
@@ -241,7 +241,7 @@
                                 До
                             </label>
                             <input class="range-slider__number range-slider__number--min" id="min-price" type="number" name="prc[min]" min="0" max="100" value="0">
-                            <input class="range-slider__number range-slider__number--max" id="max-price" type="number" name="prc[max]" min="0" max="100" value="30000">
+                            <input class="range-slider__number range-slider__number--max" id="max-price" type="number" name="prc[max]" min="0" max="30000" value="30000">
                         </div>
                     </div>
                 </details>
@@ -631,7 +631,7 @@
                         <div class="catalog-blogger__right">
                             <div class="catalog-blogger__item-rating">
                                 <div class="catalog-blogger__item-rating-head">
-                                    <p class="catalog-blogger__item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                    <p class="catalog-blogger__item-rating-head-text svg-star">Отзывов: 30</p>
                                 </div>
                                 <div class="catalog-blogger__item-rating-image">
                                     <div class="catalog-blogger__item-rating-chart">
@@ -700,7 +700,7 @@
                         <div class="catalog-blogger__right">
                             <div class="catalog-blogger__item-rating">
                                 <div class="catalog-blogger__item-rating-head">
-                                    <p class="catalog-blogger__item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                    <p class="catalog-blogger__item-rating-head-text svg-star">Отзывов: 30</p>
                                 </div>
                                 <div class="catalog-blogger__item-rating-image">
                                     <div class="catalog-blogger__item-rating-chart">
