--- a/dashboard-pay.html
+++ b/dashboard-pay.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="account__main-rating">
                     <div class="account__main-rating-head">
-                        <p class="account__main-rating-head-text svg-star">Отзыв/ов: 30</p>
+                        <p class="account__main-rating-head-text svg-star">Отзывов: 30</p>
                     </div>
                     <div class="account__main-rating-image">
                         <div class="account__main-rating-chart">
