developen blogger card 30.03.2021

--- a/blogger.html
+++ b/blogger.html
@@ -213,6 +213,11 @@
                         </ul>
                     </div>
                     <div class="blogger__right-bottom">
+                        <button class="blogger__button blogger__button--favorit" href="#services">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 50 50" viewBox="0 0 50 50" xml:space="preserve" class="catalog-blogger__item-user-svg">
+                                <path d="M35,8  c-4.176,0-7.851,2.136-10,5.373C22.851,10.136,19.176,8,15,8C8.373,8,3,13.373,3,20c0,14,16,21,22,26c6-5,22-12,22-26  C47,13.373,41.627,8,35,8z" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"></path>
+                            </svg>
+                            Добавить в избраное</button>
                         <a class="blogger__button" href="#services">Начать сотрудничество</a>
                     </div>
                 </div>
@@ -390,6 +395,39 @@
                             <a class="services__info-link" href="#">Заказать услугу</a>
                         </div>
                         <p class="services__price">440 грн.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="posts">
+            <div class="posts__wrap">
+                <h2 class="posts__title">Последние публикации</h2>
+                <ul class="posts__list">
+                    <li class="posts__item">
+                        <div class="posts__item-for-img">
+                            <img class="posts__item-img" src="img/test_post.jpg">
+                        </div>
+                        <ul class="posts__info">
+                            <li class="posts__info-item">
+                                <span class="posts__info-svg svg-like"></span>
+                                <span class="tooltip__show">136</span>
+                                <span class="tooltip__content">Учитываются только лайки полученные органическим путем</span>
+                            </li>
+                            <li class="post__info-item"></li>
+                        </ul>
+                    </li>
+                    <li class="posts__item">
+                        <div class="posts__item-type posts__item-type--video"></div>
+                            <div class="posts__item-for-img">
+                                <img class="posts__item-img" src="img/test_post.jpg">
+                            </div>
+                    </li>
+                    <li class="posts__item">
+                        <div class="posts__item-type posts__item-type--album"></div>
+                        <div class="posts__item-for-img">
+                            <img class="posts__item-img" src="img/test_post.jpg">
+                        </div>
                     </li>
                 </ul>
             </div>
