ready page checkout

--- a/index.html
+++ b/index.html
@@ -314,16 +314,16 @@
                 </div>
                 <div class="main-5__item">
                     <div class="main-5__svg svg-chat"></div>
-                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                    <p class="main-5__text">В внутреннем чате вы обсуждаете детали сотрудничества с Блогером.</p>
                     <p class="main-5__text main-5__text--description">Так же, вы можете увеличить обьем проекта, внеся дополнительную оплату.</p>
                 </div>
                 <div class="main-5__item">
                     <div class="main-5__svg svg-mark"></div>
-                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                    <p class="main-5__text">Вы подтверждаете успешное выполнение задания блогером и он получает свою выплату</p>
                 </div>
                 <div class="main-5__item">
                     <div class="main-5__svg svg-edit"></div>
-                    <p class="main-5__text">После успешной оплаты ваши деньги резервируются на платформе</p>
+                    <p class="main-5__text">Вы оставляете отзыв о работе с Блогером</p>
                 </div>
             </div>
             <div class="main-5__ua-logo">
