developen search-bloggers

--- a/search-bloggers.html
+++ b/search-bloggers.html
@@ -606,6 +606,32 @@
                                     </div>
                                 </div>
                             </label>
+                            <div class="catalog-blogger__sort-mobi">
+                                <label class="modal__body-blog-content-form-radio-label radio__label">
+                                    <input type="radio" name="sort" value="subscribers_asc" class="radio__input">
+                                    <span class="radio__span"></span> Количество подписчиков &#8595;
+                                </label>
+                                <label class="modal__body-blog-content-form-radio-label radio__label">
+                                    <input type="radio" name="sort" value="subscribers_desc" class="radio__input">
+                                    <span class="radio__span"></span> Количество подписчиков &#8593;
+                                </label>
+                                <label class="modal__body-blog-content-form-radio-label radio__label">
+                                    <input type="radio" name="sort" value="price_asc" class="radio__input">
+                                    <span class="radio__span"></span> Цена &#8595;
+                                </label>
+                                <label class="modal__body-blog-content-form-radio-label radio__label">
+                                    <input type="radio" name="sort" value="price_desc" class="radio__input">
+                                    <span class="radio__span"></span> Цена &#8593;
+                                </label>
+                                <label class="modal__body-blog-content-form-radio-label radio__label">
+                                    <input type="radio" name="sort" value="rating" class="radio__input">
+                                    <span class="radio__span"></span> Рейтинг
+                                </label>
+                                <label class="modal__body-blog-content-form-radio-label radio__label">
+                                    <input type="radio" name="sort" value="er" class="radio__input">
+                                    <span class="radio__span"></span> ER
+                                </label>
+                            </div>
                         </div>
                     </div>
                     <button class="filters__footer-button filters__footer-button--apply">Применить</button>
