--- a/search-bloggers.html
+++ b/search-bloggers.html
@@ -838,6 +838,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="search-bloggers__pagination pagination">
+                    <ul class="pagination__list">
+                        <li class="pagination__item pagination__item--prev"></li>
+                        <li class="pagination__item">1</li>
+                        <li class="pagination__item active">2</li>
+                        <li class="pagination__item">3</li>
+                        <li class="pagination__item">4</li>
+                        <li class="pagination__item more">...</li>
+                        <li class="pagination__item">66</li>
+                        <li class="pagination__item pagination__item--next"></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </div>
