--- a/blogger.html
+++ b/blogger.html
@@ -845,6 +845,114 @@
                         </ul>
                     </div>
                 </div>
+                <ul class="reviews__list">
+                    <li class="reviews__item">
+                        <div class="reviews__item-left">
+                            <p class="reviews__item-name">Віктор</p>
+                            <p class="reviews__item-status">Рекламодатель</p>
+                            <div class="reviews__stars">
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars"></div>
+                            </div>
+                            <p class="reviews__item-grade">Отлично</p>
+                        </div>
+                        <div class="reviews__item-right">
+                            <div class="reviews__description">
+                                <p class="reviews__description-left">Отзыв по услуге: 1 Story</p>
+                                <time class="reviews__description-right">03.04.21</time>
+                            </div>
+                            <p class="reviews__text">Все зроблено прекрасно. Дякую</p>
+                        </div>
+                    </li>
+                    <li class="reviews__item">
+                        <div class="reviews__item-left">
+                            <p class="reviews__item-name">Віктор</p>
+                            <p class="reviews__item-status">Рекламодатель</p>
+                            <div class="reviews__stars">
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars"></div>
+                            </div>
+                            <p class="reviews__item-grade">Отлично</p>
+                        </div>
+                        <div class="reviews__item-right">
+                            <div class="reviews__description">
+                                <p class="reviews__description-left">Отзыв по услуге: 1 Story</p>
+                                <time class="reviews__description-right">03.04.21</time>
+                            </div>
+                            <p class="reviews__text">Все зроблено прекрасно. Дякую</p>
+                        </div>
+                    </li>
+                    <li class="reviews__item">
+                        <div class="reviews__item-left">
+                            <p class="reviews__item-name">Віктор</p>
+                            <p class="reviews__item-status">Рекламодатель</p>
+                            <div class="reviews__stars">
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars"></div>
+                            </div>
+                            <p class="reviews__item-grade">Отлично</p>
+                        </div>
+                        <div class="reviews__item-right">
+                            <div class="reviews__description">
+                                <p class="reviews__description-left">Отзыв по услуге: 1 Story</p>
+                                <time class="reviews__description-right">03.04.21</time>
+                            </div>
+                            <p class="reviews__text">Все зроблено прекрасно. Дякую</p>
+                        </div>
+                    </li>
+                    <li class="reviews__item">
+                        <div class="reviews__item-left">
+                            <p class="reviews__item-name">Віктор</p>
+                            <p class="reviews__item-status">Рекламодатель</p>
+                            <div class="reviews__stars">
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars"></div>
+                            </div>
+                            <p class="reviews__item-grade">Отлично</p>
+                        </div>
+                        <div class="reviews__item-right">
+                            <div class="reviews__description">
+                                <p class="reviews__description-left">Отзыв по услуге: 1 Story</p>
+                                <time class="reviews__description-right">03.04.21</time>
+                            </div>
+                            <p class="reviews__text">Все зроблено прекрасно. Дякую</p>
+                        </div>
+                    </li>
+                    <li class="reviews__item">
+                        <div class="reviews__item-left">
+                            <p class="reviews__item-name">Віктор</p>
+                            <p class="reviews__item-status">Рекламодатель</p>
+                            <div class="reviews__stars">
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars svg-stars--active"></div>
+                                <div class="reviews__star svg-stars"></div>
+                            </div>
+                            <p class="reviews__item-grade">Отлично</p>
+                        </div>
+                        <div class="reviews__item-right">
+                            <div class="reviews__description">
+                                <p class="reviews__description-left">Отзыв по услуге: 1 Story</p>
+                                <time class="reviews__description-right">03.04.21</time>
+                            </div>
+                            <p class="reviews__text">Все зроблено прекрасно. Дякую</p>
+                        </div>
+                    </li>
+                </ul>
+                <button class="reviews__more button">Показать все отзывы</button>
             </div>
 
         </section>
