ready adaptive for blogger

--- a/blogger.html
+++ b/blogger.html
@@ -15,31 +15,7 @@
     <meta property="og:image" content="img/2-layers-3.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" type="image/svg" href="favicon.svg" sizes="32x32">
-
     <link rel="stylesheet" href="css/style.min.css">
-
-    <style>
-        .blogger__chart {
-            width: 100px;
-            height: 100px;
-            outline: 1px solid #ff0000;
-        }
-        .blogger__chart-text {
-            color: #ff0000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            height: 100%;
-        }
-        .charts__list-item {
-            outline: 1px solid #ff0000;
-            height: 200px;
-        }
-        .analytics__chart {
-            outline: 1px solid #ff0000;
-        }
-    </style>
 </head>
 <body>
 
@@ -181,7 +157,7 @@
                         <div class="blogger__right-info">
                             <h1 class="blogger__name">Алина</h1>
                             <p class="blogger__city">Киев</p>
-                            <div class="blogger__tags">
+                            <div class="blogger__tags chart">
                                 <p class="blogger__tags-text">Тематики:</p>
                                 <p class="blogger__tags-button blogger__tags-button--uno">Здоровье</p>
                                 <p class="blogger__tags-button blogger__tags-button--dos">Лайфстайл</p>
@@ -301,7 +277,7 @@
                     </div>
                     <div class="analytics__item">
                         <h3 class="analytics__item-title">Аналитика публикаций</h3>
-                        <ul class="blogger__stats blogger__stats--margin">
+                        <ul class="blogger__stats blogger__stats--post blogger__stats--margin">
                             <li class="blogger__stats-item">
                                 <p class="blogger__stats-text">Среднее количество лайков</p>
                                 <p class="blogger__stats-title">295</p>
